# dungeon_clash

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  TECH_STACK.md  dungeon_clash.py  dungeon_clash_GDD.md  prototype.py  pyproject.toml
.github/workflows/: ci.yml
dungeon_clash/: __init__.py  service.py
dungeon_clash/active/: __init__.py  session.py
dungeon_clash/adapters/: __init__.py
dungeon_clash/adapters/persist/: __init__.py  store.py
dungeon_clash/adapters/render/: __init__.py  format.py  sprites.py
dungeon_clash/cli/: __init__.py  app.py  play.py
dungeon_clash/content/: __init__.py  loader.py  schema.py
dungeon_clash/content/data/: enemies.toml
dungeon_clash/core/: __init__.py  combat.py  events.py  models.py  rng.py  stress.py  zones.py
dungeon_clash/passive/: __init__.py  events.py  registry.py  session.py
dungeon_clash/run/: __init__.py  engine.py  events.py  resources.py  rooms.py  session.py  state.py
dungeon_clash/strategy/: __init__.py  bots.py  events.py  intents.py  protocol.py  runner.py
tests/: conftest.py  test_active_session.py  test_cli.py  test_combat_properties.py  test_combat_skip.py  test_combat_unit.py  test_content.py  test_core_primitives.py  test_determinism.py  test_passive_session.py  test_persist_store.py  test_render.py  test_run.py  test_run_session.py  test_service.py  test_strategy_integration.py  test_strategy_intents.py  test_strategy_runner.py  test_stress.py  test_tui.py
